force-app/main/default/objects/Replenishment__c/Replenishment__c.object-meta.xml
<CustomObject>
    <label>Replenishment</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Replenishment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replenishment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>