force-app/main/default/objects/Replenishment__c/fields/AverageLeadTime__c.field-meta.xml
<CustomField>
    <fullName>AverageLeadTime__c</fullName>
    <label>Average Delivery Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>