force-app/main/default/objects/Replenishment__c/fields/AverageUnitSalesPerDay__c.field-meta.xml
<CustomField>
    <fullName>AverageUnitSalesPerDay__c</fullName>
    <label>Average Unit Sales Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>