force-app/main/default/objects/Replenishment__c/fields/MaxInventoryQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxInventoryQuantity__c</fullName>
    <label>Max Inventory Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>