force-app/main/default/objects/Replenishment__c/fields/MaxLeadTime__c.field-meta.xml
<CustomField>
    <fullName>MaxLeadTime__c</fullName>
    <label>Max Delivery Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>