force-app/main/default/objects/Replenishment__c/fields/MaxUnitSalesPerDay__c.field-meta.xml
<CustomField>
    <fullName>MaxUnitSalesPerDay__c</fullName>
    <label>Max Unit Sales Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>