force-app/main/default/objects/Replenishment__c/fields/ReorderQuantity__c.field-meta.xml
<CustomField>
    <fullName>ReorderQuantity__c</fullName>
    <label>Reorder Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>