force-app/main/default/objects/Replenishment__c/fields/SafetyStock__c.field-meta.xml
<CustomField>
    <fullName>SafetyStock__c</fullName>
    <formula>(MaxUnitSalesPerDay__c *  MaxLeadTime__c) -  (AverageUnitSalesPerDay__c * AverageLeadTime__c )</formula>
    <inlineHelpText>Safety Stock=(Max Unit Sales Per Day * Max Delivery Lead Time)-(Average Unit Sales Per Day * Average Delivery Lead Time)
Additional quantity of an item held in inventory in order to reduce the risk that the item will be out of stock.</inlineHelpText>
    <label>Safety Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>