force-app/main/default/objects/Replenishment__c/recordTypes/AutoInputReorderQuantity.recordType-meta.xml
<RecordType>
    <fullName>AutoInputReorderQuantity</fullName>
    <active>true</active>
    <label>Auto Input Reorder Quantity</label>
</RecordType>