force-app/main/default/objects/Replenishment__c/recordTypes/ManualInputReorderQuantity.recordType-meta.xml
<RecordType>
    <fullName>ManualInputReorderQuantity</fullName>
    <active>true</active>
    <label>Manual Input Reorder Quantity</label>
</RecordType>