force-app/main/default/objects/Replenishment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ProductID__c</columns>
    <columns>ReorderPoint__c</columns>
    <columns>ReorderQuantity__c</columns>
    <columns>SafetyStock__c</columns>
    <columns>EconomicOrderQuantity__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>